@@ -22,8 +22,7 @@ I_opts="-I${includedir}"
 L_opts="-L${libdir}"
 R_opts=""
 cppflags=""
-%12-%ccopts="@LIBPNG_NO_MMX@"
-%14+%ccopts=""
+ccopts=""
 ldopts=""
 
 usage()
