@@ -8,5 +8,4 @@ Description: Loads and saves PNG files
 Version: @PNGLIB_VERSION@
 Libs: -L${libdir} -lpng@PNGLIB_MAJOR@@PNGLIB_MINOR@
 Libs.private: @LIBS@
-%12-%Cflags: -I${includedir} @LIBPNG_NO_MMX@
-%14+%Cflags: -I${includedir}
+Cflags: -I${includedir}
